charts/common/aws-authservice/templates/VirtualService/authservice-web-cognito-istio-system-VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authservice-web-cognito
  namespace: istio-system
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /authservice/logout
    route:
    - destination:
        host: aws-authservice.istio-system.svc.cluster.local
        port:
          number: 8082
